syntax = 'proto3';

option java_package = "app.auth.proto.cognito";
option java_multiple_files = true;


message ProcessAuthCodeRequest {
  string auth_code = 1;
}

message ProcessAuthCodeResponse {
    string access_token = 1;
    string id_token = 2;
    string refresh_token = 3;
    int64 expires_in = 4;
}

service CognitoService {
  rpc ProcessAuthCode(ProcessAuthCodeRequest) returns (ProcessAuthCodeResponse) {}
}
